test(EEJT-0004) added testing for several classes